fixing iphone se layout issues

--- a/style.css
+++ b/style.css
@@ -235,48 +235,34 @@ article h2 {
     .hello {
        max-width: 50%;
     }
-}
-
-
-@media (550px < width < 767px) {
-  
-  /*   .call_to_action {
-      position: absolute;
-      right: 5vw;
-      bottom: 2vh;
-    } */
-
-  /*   .hi {
-        position: absolute;
-        bottom: 35vh;
-    }
-    .answer {
-        position: absolute;
-        bottom: 30vh;
-    }
-       
-.hello {
-    padding: 0;
-    position: absolute;
-    bottom: 10vh;
-} */
-}
-      
+}   
       
 
-@media (400px < width < 599px) {
-  
-   /*  .call_to_action {
-        position: absolute;
-        right: 5vw;
-        bottom: 50vh;
-        transform: rotate(-90deg) scale(-1);
-      }
-    
-.hello {
-    padding: 0;
-    position: absolute;
-    bottom: 20vh;
-} */
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+                    only screen and (min--moz-device-pixel-ratio: 2),
+                    only screen and (-o-min-device-pixel-ratio: 2/1),
+                    only screen and (min-device-pixel-ratio: 2)
+{  
+
+    body {
+        min-height: 100vh;
+    }
+    main {
+        width: 95%;
+        height: 100%;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    p,h4 {
+        font-size: 1rem;
+    }
+
+    .hero > img {
+        width: 60%;
+    }
+
 }
       
